# ebilling-postfinance

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pytest.ini  setup.cfg
.github/workflows/: workflow.yml
ebilling_postfinance/: __init__.py  ebilling_postfinance.py
ebilling_postfinance/certificates/inte/: ebill-ki.postfinance.ch.cer
ebilling_postfinance/certificates/prod/: ebill.postfinance.ch.cer
ebilling_postfinance/wsdl/: b2bservice_inte.wsdl  b2bservice_prod.wsdl
tests/: test_api_calls.py
