[metadata]
name = ebilling_postfinance
version = 0.1.0
author = Camptocamp SA
author_email = info@camptocamp.com
url = https://github.com/camptocamp/ebilling_postfinance
description = A Python library to access the eBill web service of Postfinance
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
classifiers =
    Development Status :: 2 - Pre-Alpha",
    Intended Audience :: Developers",
    License :: OSI Approved :: MIT License",
    Programming Language :: Python :: 3

[options]
packages =
    ebilling_postfinance
    ebilling_postfinance/certificates/inte
    ebilling_postfinance/certificates/prod
    ebilling_postfinance/wsdl
include_package_data = True
install_requires =
    zeep
    requests

[options.package_data]
* = *.wsdl, *.cer

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-env
    vcrpy
