[metadata]
name = ebilling_postfinance
version = 0.1.1
author = Camptocamp (Thierry Ducrest)
author_email = thierry.ducrest@camptocamp.com
url = https://github.com/camptocamp/ebilling-postfinance
description = A Python library to access the eBill web service of Postfinance
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU Affero General Public License v3 or later (AGPLv3+)
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Python :: 3

[options]
packages =
    ebilling_postfinance
    ebilling_postfinance/certificates/inte
    ebilling_postfinance/certificates/prod
    ebilling_postfinance/wsdl
include_package_data = True
install_requires =
    zeep
    requests

[options.package_data]
* = *.wsdl, *.cer

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-env
    vcrpy
